<resources>
    <string name="app_name">SSUMobile</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="news_button">University News</string>
    <string name="calendar_button">Calendar</string>
    <string name="directory_button">Directory</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="cal_button_send">test connection to calendar API?</string>
    <string name="news_button_send">test connection to news API?</string>
    <string name="dir_button_send">test connection to Directory API?</string>
    <string name="title_activity_news">University News</string>
    <string name="title_activity_dir">Directory</string>
    <string name="contact_button">Contact</string>
    <string name="resources_button">Resources</string>
    <string name="title_activity_contact">Contacts</string>
    <string name="title_activity_calendar_single_date">CalendarSingleDate</string>
    <string name="PLAIN_TEXT_TYPE">"text/plain"</string>
    <string name="title_activity_calendar_single_event">calendarSingleEvent</string>

    <string name="Faculty_Staff_Directory">"Faculty &amp; Staff"</string>
    <string name="Departments_Directory">"Departments"</string>
    <string name="Buildings_Directory">"Buildings"</string>
    <string name="Schools_Directory">"Schools"</string>
    <string name="name_button">"Name"</string>
    <string name="title_button">"Title"</string>
    <string name="phone_button">"Phone"</string>
    <string name="email_button">"Email"</string>
    <string name="search">"Search&#8230;"</string>
    <string name="add_to_contacts">"Add To Contacts"</string>
    <string name="department_button">"Department"</string>
    <string name="office_button">"Office"</string>
    <string name="mockName">"John Doe"</string>
    <string name="web_site">"Website Button"</string>
    <string name="display_name">Display Name</string>
    <string name="title_activity_resources">resourcesActivity</string>
    <string name="title_activity_resource_to_url">resourceToURL</string>
    <string name="building_button">"Building"</string>
</resources>
