<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#001339" >

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_button"
        android:id="@+id/name_button"
        android:background="@drawable/ssubutton"
        android:layout_alignParentTop="true"
        android:textColor="@color/caldroid_white" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_button"
        android:id="@+id/Title_button"
        android:background="@drawable/ssubutton"
        android:layout_below="@+id/name_button"
        android:layout_marginTop = "12dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/caldroid_white"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/department_button"
        android:id="@+id/department_button"
        android:layout_below="@+id/Title_button"
        android:background="@drawable/ssubutton"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp"
        android:layout_alignParentEnd="true"
        android:textColor="@color/caldroid_white" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/office_button"
        android:layout_below="@+id/department_button"
        android:background="@drawable/ssubutton"
        android:layout_marginTop = "12dp"
        android:layout_alignEnd="@+id/name_button"
        android:layout_alignParentStart="true"
        android:id="@+id/office_button"
        android:textColor="@color/caldroid_white"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_button"
        android:id="@+id/Phone_button"
        android:background="@drawable/ssubutton"
        android:layout_marginTop = "35dp"
        android:layout_below="@+id/office_button"
        android:layout_alignEnd="@+id/name_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/caldroid_white"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_button"
        android:id="@+id/Email_button"
        android:background="@drawable/ssubutton"
        android:layout_below="@+id/Phone_button"
        android:layout_marginTop = "15dp"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/name_button"
        android:textColor="@color/caldroid_white"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to_contacts"
        android:id="@+id/AddContact_button"
        android:background="@drawable/ssubutton"
        android:textColor="@color/caldroid_white"
        android:layout_marginTop="25dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>