<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:orientation="vertical"
    android:background="#d5d7e9" >

    <ImageView
        android:layout_width="150dp"
        android:layout_height="125dp"
        android:src="@drawable/ic_launcher"
        android:scaleType="fitCenter"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/directory_button"
        android:background="@drawable/roundedbutton"
        android:id="@+id/dir_button"
        android:paddingTop="10dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="155dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/calendar_button"
        android:id="@+id/calendar_button"
        android:background="@drawable/roundedbutton"
        android:paddingBottom="10dp"
        android:layout_below="@+id/dir_button"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_news"
        android:id="@+id/news_button"
        android:background="@drawable/roundedbutton"
        android:paddingTop="10dp"
        android:layout_below="@+id/calendar_button"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/resources_button"
        android:background="@drawable/roundedbutton"
        android:id="@+id/resource_button"
        android:paddingTop="10dp"
        android:layout_below="@+id/news_button"
        android:layout_alignParentStart="true" />

</RelativeLayout>
