<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#001339"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/DisplayName_button"
        android:background="@drawable/ssubutton"
        android:textColor="@color/caldroid_white"
        android:text="@string/display_name"
        android:layout_marginTop="5dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/webSite_button"
        android:text="@string/web_site"
        android:background="@drawable/ssubutton"
        android:textColor="@color/caldroid_white"
        android:layout_below="@+id/Phone_button"
        android:layout_alignEnd="@+id/DisplayName_button"
        android:layout_marginTop="5dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_button"
        android:id="@+id/Phone_button"
        android:background="@drawable/ssubutton"
        android:textColor="@color/caldroid_white"
        android:layout_below="@+id/DisplayName_button"
        android:layout_marginTop="5dp" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/building_button"
        android:id="@+id/building_button"
        android:background="@drawable/ssubutton"
        android:textColor="@color/caldroid_white"
        android:layout_below="@+id/webSite_button"
        android:layout_alignEnd="@+id/webSite_button"
        android:layout_marginTop="5dp" />

    <ListView
        android:id="@+id/mobile_list"
        android:layout_width="match_parent"
        android:divider="@drawable/list_divider"
        android:layout_height="wrap_content"
        android:dividerHeight="4dp"
        android:layout_below="@id/building_button"
        android:layout_marginTop="20dp">
    </ListView>


</RelativeLayout>